# p44mbcd

./: .gitignore  .gitmodules  ChangeLog  Makefile.am  README.md  configure.ac
p44mbc.xcodeproj/: project.pbxproj
p44mbc.xcodeproj/xcshareddata/xcschemes/: p44mbcd.xcscheme  p44mbutil.xcscheme
src/: lv_conf.h  lv_drv_conf.h  lv_ex_conf.h  lvgl.cpp  lvgl.hpp  lvglui.cpp  lvglui.hpp  main.cpp  p44mbcd_main.cpp  p44mbutil_main.cpp  p44utils_config.hpp
src/lv_examples/lv_apps/demo/: demo.c  demo.h
